k8s/keycloak/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: keycloak-postgres-data
          persistentVolumeClaim:
            claimName: keycloak-postgres-data
