k8s/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      enableServiceLinks: false
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0.7
          args:
            - start
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: management
              containerPort: 9000
            - name: jgroups
              containerPort: 7800
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
