k8s/keycloak/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-lb
  namespace: keycloak
spec:
  type: LoadBalancer
  selector:
    app: keycloak
  ports:
    - name: https
      port: 8443
      targetPort: 8443
    - name: management
      port: 9000
      targetPort: 9000
    - name: jgroups
      port: 7800
      targetPort: 7800
